# Aether

./: CMakeLists.txt  LICENSE  README.md
Aether/src/Aether/Common/Automata/: Automata.h
Aether/src/Aether/Common/Errors/: Errors.cpp  Errors.h
Aether/src/Aether/Common/Util/: Macros.h  Options.h
Aether/src/Aether/Stargazer/Grammars/: Function.txt
Aether/src/Aether/Stargazer/Lexer/: Lexer.h  Token.h
tests/: AllocationTest.cpp  main  test1.ae
